--- a/app/views/pages/editarsweet.ejs
+++ b/app/views/pages/editarsweet.ejs
@@ -134,21 +134,6 @@
         <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
 
-    <script>
-        function previewImage(input, previewId) {
-            if (input.files && input.files[0]) {
-                const reader = new FileReader();
-                reader.onload = function(e) {
-                    const preview = document.getElementById(previewId);
-                    if (preview.tagName === 'IMG') {
-                        preview.src = e.target.result;
-                    } else {
-                        preview.innerHTML = `<img src="${e.target.result}" alt="Preview" class="content-image">`;
-                    }
-                };
-                reader.readAsDataURL(input.files[0]);
-            }
-        }
-    </script>
+    <script src="js/editarpost.js"></script>
 </body>
 </html>
